--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <div>
             <center>
-                <img src = "profile_image.png" alt =" profile photo" width="200" height = "200">
+                <img src = "profile_photo.png" alt =" profile photo" width="200" height = "200">
             </center>
         </div>
         <center>
@@ -22,7 +22,7 @@
             
                 <summary>About Me </summary>
                 
-                <p>I am a Program Analyst at Cognizant Pvt Ltd. I am a keen and  faster learner that belives in hard work with smart strategies can lead us to impossible achievements. I am currently working as an Full Stack Web Development Intern at Edureka whereI am enhancing my technical skills and learning new technologies.
+                <p>I am a Program Analyst at Cognizant Pvt Ltd. I am a keen and  faster learner that belives in hard work with smart strategies can lead us to impossible achievements. I am currently working as an Full Stack Web Development Intern at Edureka where I am enhancing my technical skills and learning new technologies.
                 </p>
 
             </details>
